# Dise-o_Electronico_2026-1

./: LICENSE  PotenciasDes.html  README.md
Codigo_Proyecto/: CMakeLists.txt
Codigo_Proyecto/main/: CMakeLists.txt
Codigo_Proyecto/main/headers/: dashboard.h  sensor.h  wifi_manager.h
Codigo_Proyecto/main/sources/: dashboard.c  main.c  sensor.c  wifi_manager.c
Codigo_Proyecto/scripts/: patch_agronica_js.py
Presentacion_Proyecto_Laura/: presentaci_n_interactiva.html
